# aivpn

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.client  Dockerfile.prebuilt  README.md  README_RU.md  deploy-server-release.sh  docker-compose.yml  docker-entrypoint.sh
.github/workflows/: server-release-asset.yml
aivpn-android/: build-rust-android.sh
aivpn-android-core/: Cargo.toml
aivpn-android-core/src/: android_tunnel.rs  lib.rs
aivpn-android/app/: build.gradle
aivpn-client/: Cargo.toml
aivpn-client/src/: bootstrap_cache.rs  bootstrap_loader.rs  client.rs  lib.rs  main.rs  mimicry.rs  record_cmd.rs  tunnel.rs
aivpn-common/: Cargo.toml
aivpn-common/src/: client_wire.rs  crypto.rs  lib.rs  mask.rs  network_config.rs  protocol.rs  recording.rs  upload_pipeline.rs
aivpn-common/tests/: battle_tests.rs
aivpn-macos/: AivpnApp.swift  ConnectionKey.swift  ContentView.swift  LocalizationManager.swift  VPNManager.swift  build.sh
aivpn-macos/aivpn-helper/: main.swift
aivpn-server/: Cargo.toml
aivpn-server/src/: client_db.rs  gateway.rs  lib.rs  main.rs  mask_gen.rs  mask_store.rs  nat.rs  recording.rs  server.rs  session.rs
aivpn-server/tests/: battle_tests.rs  recording_tests.rs
config/: server.json.example
mask-assets/: quic_https_v2.json  webrtc_sberjazz_v1.json  webrtc_vk_teams_v1.json  webrtc_yandex_telemost_v1.json  webrtc_zoom_v3.json
releases/: RELEASE_NOTES.md  aivpn-client-linux-x86_64  aivpn-client-macos  aivpn-client.apk  aivpn-macos.dmg  aivpn-macos.pkg  aivpn-server  aivpn-server-linux-x86_64
(+10 files in other folders)
