[package]
name = "aivpn-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "aivpn-server"
path = "src/main.rs"

[dependencies]
aivpn-common = { path = "../aivpn-common" }

# Crypto
chacha20poly1305.workspace = true
x25519-dalek.workspace = true
blake3.workspace = true
ed25519-dalek = "2.0"
subtle.workspace = true

# Async
tokio.workspace = true
tokio-util.workspace = true

# Networking
tun = { version = "0.7", features = ["async"] }
socket2.workspace = true

# Concurrency
dashmap.workspace = true
parking_lot.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true
rmp-serde.workspace = true

# Utils
rand.workspace = true
hex = "0.4"
tracing.workspace = true
tracing-subscriber.workspace = true
thiserror.workspace = true
bytes.workspace = true
chrono.workspace = true
base64 = "0.22"
clap = { version = "4.4", features = ["derive", "env"] }

# Monitoring (Phase 5)
prometheus = { version = "0.13", optional = true }

# HTTP client for passive distribution (Phase 4)
reqwest = { version = "0.11", features = ["json", "stream"], optional = true }

[features]
default = []
neural = []
metrics = ["prometheus"]
passive-distribution = ["reqwest"]
